// version: 1.0

syntax = "proto3";

package qlua.rpc.datasource.SetUpdateCallback;

option optimize_for = SPEED;
option java_package = "qlua.rpc.datasource";

message Args {

    string datasource_uuid = 1; 
    string f_cb_def = 2; // NB: формат функции: "function (NUMBER index, TABLE datasource) function_body end"
    bool watching_o = 3;
    bool watching_h = 4;
    bool watching_l = 5;
    bool watching_c = 6;
    bool watching_v = 7;
    bool watching_t = 8;
    bool watching_size = 9;
}

message Result {
    bool result = 1;
}
